--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -5,6 +5,7 @@
 		isPost: <%=is_post()%>,
 		isArchive: <%=is_archive()%>,
 		isTag: <%=is_tag()%>,
+		toc_hide_index: <%=theme.toc_hide_index%>,
 		isCategory: <%=is_category()%>,
 		open_in_new: <%=theme.open_in_new%>,
 		toc_hide_index: <%=theme.toc_hide_index%>,
